# NRML

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NRML_ENHANCEMENT_PROPOSAL.md  README.md  TRACEABLE_EXECUTION.md  example-simple.nrml.json  generate-sample-data.js  kinderbijslag.nrml.json  nrml-abstract-grammar.ebnf  package-lock.json  package.json  penitentiaire-beginselenwet-complete.nrml.json  penitentiaire-beginselenwet-complete.regelspraak.txt  penitentiaire-beginselenwet-enhanced.nrml.json  penitentiaire-beginselenwet-simple.nrml.json  penitentiaire-beginselenwet-simple.regelspraak.txt  penitentiaire-beginselenwet-unified.nrml.json  penitentiaire-beginselenwet-unified.regelspraak.txt  penitentiaire-beginselenwet.nrml.json  penitentiaire-beginselenwet.regelspraak.txt  pyproject.toml  schema.json  test-scenario.md  test-senior-sample.nrml.json  toka.nrml.json  toka.regelspraak.groundtruth.txt  toka.regelspraak.unified.txt  toka2.nrml.json
blockly/: BLOCKLY_INTEGRATION_SUMMARY.md  PYCHARM_SETUP.md  SCHEMA_FIX.md  TESTING.md  pyproject.toml  pytest.ini  test_expected_output.py  test_schema_compliance.py  validate_with_schema.py
blockly/custom_blocks/: DEMO_GUIDE.md  README.md  demo.html  example.ts  nrml_blocks.d.ts  nrml_blocks.js
blockly/nrml-conversion/: -  README.md  __init__.py  block_analyzer.py  convert.py  converter.py  metadata_parser.py  nrml_generators.py  nrml_registry.py  requirements.txt
blockly/nrml-editor/: README.md  index.html
blockly/tests/: README.md  __init__.py  conftest.py  test_conversion.py
doc/: comparison.md  notes.md
(+45 files in other folders)
