[project]
name = "NRML"
version = "0.1.0"
description = "NRML (uitspraak: /ˈnɔrməl/) is een JSON-gebaseerd formaat voor het beschrijven van bedrijfsregels, objectmodellen en hun relaties op een gestructureerde manier."
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "jsonschema>=4.25.1",
]
